<resources>
    <string name="app_name">GithubRepo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--server response codes-->
    <string name="https_400_error">Bad Request</string>
    <string name="http_401_error">Unauthorized access</string>
    <string name="http_403_error">Forbidden or denied access</string>
    <string name="http_404_error">Resource Not Found</string>
    <string name="http_500_error">Internal Server Error</string>
    <string name="http_some_other_error">Some error occurred! Please try again later.</string>

    <string name="on_location_instruction">Please go to app settings and enable permissions</string>
    <string name="dialog_alert_heading">Alert</string>
    <string name="validation_internet_connection">Please check internet connection</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="unauthorized_access">Your session has expired.</string>
    <string name="no_internet">Please check your internet connection</string>

    <string name="alert_txt">Alert</string>
    <string name="name">Name :</string>
    <string name="repositry">Repositry :</string>
    <string name="rank">Rank :</string>

</resources>