<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_290sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:background="@color/white"
    card_view:cardCornerRadius="@dimen/_10sdp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/circularstd_bold"
            android:singleLine="true"
            android:text="@string/dialog_alert_heading"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:lineSpacingExtra="@dimen/_5sdp"
            android:id="@+id/alertMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/circularstd_medium"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/dr_orange_background"
                android:fontFamily="@font/circularstd_medium"
                android:text="@string/ok"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
