<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_bold"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sdp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:textDirection="locale"
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:textDirection="locale"
                android:id="@+id/buttonNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                android:fontFamily="@font/circularstd_medium"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:textDirection="locale"
                android:id="@+id/buttonYes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                android:fontFamily="@font/circularstd_medium"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>
